# doki

doki-server/: Cargo.toml  Dockerfile  README.md  Rocket.toml  config.yaml  rustfmt.toml
doki-server/src/: main.rs  state.rs
doki-server/src/api/: admin.rs
doki-server/src/services/: archive.rs  auth.rs  mod.rs  s3.rs
doki-server/src/settings/: settings.rs
