[package]
name = "doki-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["tls", "json", "serde_json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars", "tera"] }
tokio = { version = "1.40.0", features = ["full"] }
aws-config = "1.5.8"
aws-sdk-s3 = "1.54.0"
dotenv = "0.15.0"
config = "0.14.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.82"
thiserror = "1.0.59"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21.7"
log = "0.4.22"